--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>project</title>
+    <title>pizza</title>
+    <link rel="icon" type="image/png" href="http://officialwebsitestorage.blob.core.chinacloudapi.cn/public/files/css/favicons/favicon-96x96.png" sizes="96x96">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
