关于小项目的一个上传到虚拟主机的版本，待完善

--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>pizza</title>
-    <link rel="icon" type="image/png" href="http://officialwebsitestorage.blob.core.chinacloudapi.cn/public/files/css/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="shortcut icon" href="https://myone-1257937106.cos.ap-beijing.myqcloud.com/201921816587995logo.jpg?q-sign-algorithm=sha1&q-ak=AKID3rc5moEhqKujXBYUlIheAyh5FEori1Dg&q-sign-time=1550480390;1550482190&q-key-time=1550480390;1550482190&q-header-list=&q-url-param-list=&q-signature=69d0723cad50c74ee979a793891eb731252ee105&x-cos-security-token=991087ba79476ea1441ca98ffdc4671c63dba85310001" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
